# FeatureFlag

./: .dockerignore  .env  .env.example  .gitignore  COMPLETE_SETUP_AND_REFERENCE_GUIDE.md  DEPLOY_TO_HUGGINGFACE.md  Dockerfile  README.md  changes.md  inference.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  run_live_demo.py  validate-submission.sh  validation_suite.sh
backend/: .env.example  .gitignore  COLAB_IMPLEMENTATION_GUIDE.md  COMMANDS_TO_TEST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY_GUIDE.md  TEST_RESULTS.md  dqn_weights.npz  final_verification.py  inference.py  openenv.yaml  pyproject.toml  pytest_log.txt  test_db_init.py  test_langfuse.py  test_output.txt  train_enterprise.py
backend/agents/: ensemble_agent.py  factory.py  human_in_loop_agent.py  hybrid_agent.py  llm_agent.py  metrics.py  replay_buffer.py
backend/examples/: anomaly_demo.py  (+6 more)
feature-flag-agent-env/: .env.example  COLAB_IMPLEMENTATION_GUIDE.md  Dockerfile  FEATURE_CHANGES_AND_TESTING.md  README.md  dqn_weights.npz  fail.txt  fail2.txt  fail3.txt  inference.py  openenv.yaml  package-lock.json  pre_validation.sh  pyproject.toml  requirements.txt  run_all_checks.ps1  simulate_conflicts.py  test_enterprise_master.py  test_output.txt  test_results.txt  train_rl.py  verify_security.py
feature_flag_agent_env.egg-info/: PKG-INFO  requires.txt  top_level.txt
feature_flag_env/: __init__.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
logs/: app.db
scripts/: deploy_to_hf.ps1
server/: __init__.py  app.py
(+204 files in other folders)
