[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-flag-agent-env"
version = "0.1.0"
description = "AI-Powered Feature Rollout & Risk Management Simulation"
requires-python = ">=3.10"
dependencies = [
    # 🛡️ Data Validation & Settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # 🌐 Web Server (for OpenEnv API)
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    
    # 🧮 Math & Simulation
    "numpy>=1.24.0",
    "torch>=2.0.0",
    
    # 🤖 LLM Integration (OpenAI-compatible client)
    "groq>=0.4.0",
    "openai>=1.0.0",
    
    # 🔧 Utilities
    "python-dotenv>=1.0.0",  # For loading .env files
    "pytest>=7.0.0",         # For testing
    "httpx>=0.24.0",         # For async HTTP requests
    "openenv-core>=0.2.0",   # For OpenEnv validation/runtime compatibility
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "black",   # Code formatting
    "flake8",  # Linting
]

[tool.setuptools]
packages = ["feature_flag_env", "agents", "server"]

[tool.setuptools.package-data]
"feature_flag_env" = ["**/*.yaml", "**/*.json"]
